--- a/Intro_ggplot.html
+++ b/Intro_ggplot.html
@@ -358,19 +358,19 @@ $(document).ready(function () {
 <p>We’ll start off by using a dataset called “mpg” It should have loaded with the tidyverse package. Just type it in to find it</p>
 <pre class="r"><code>mpg</code></pre>
 <pre><code>## # A tibble: 234 × 11
-##    manufacturer model      displ  year   cyl trans drv     cty   hwy fl   
-##    &lt;chr&gt;        &lt;chr&gt;      &lt;dbl&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt; &lt;chr&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;
-##  1 audi         a4           1.8  1999     4 auto… f        18    29 p    
-##  2 audi         a4           1.8  1999     4 manu… f        21    29 p    
-##  3 audi         a4           2    2008     4 manu… f        20    31 p    
-##  4 audi         a4           2    2008     4 auto… f        21    30 p    
-##  5 audi         a4           2.8  1999     6 auto… f        16    26 p    
-##  6 audi         a4           2.8  1999     6 manu… f        18    26 p    
-##  7 audi         a4           3.1  2008     6 auto… f        18    27 p    
-##  8 audi         a4 quattro   1.8  1999     4 manu… 4        18    26 p    
-##  9 audi         a4 quattro   1.8  1999     4 auto… 4        16    25 p    
-## 10 audi         a4 quattro   2    2008     4 manu… 4        20    28 p    
-## # … with 224 more rows, and 1 more variable: class &lt;chr&gt;</code></pre>
+##    manufacturer model      displ  year   cyl trans drv     cty   hwy fl    class
+##    &lt;chr&gt;        &lt;chr&gt;      &lt;dbl&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt; &lt;chr&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt; &lt;chr&gt;
+##  1 audi         a4           1.8  1999     4 auto… f        18    29 p     comp…
+##  2 audi         a4           1.8  1999     4 manu… f        21    29 p     comp…
+##  3 audi         a4           2    2008     4 manu… f        20    31 p     comp…
+##  4 audi         a4           2    2008     4 auto… f        21    30 p     comp…
+##  5 audi         a4           2.8  1999     6 auto… f        16    26 p     comp…
+##  6 audi         a4           2.8  1999     6 manu… f        18    26 p     comp…
+##  7 audi         a4           3.1  2008     6 auto… f        18    27 p     comp…
+##  8 audi         a4 quattro   1.8  1999     4 manu… 4        18    26 p     comp…
+##  9 audi         a4 quattro   1.8  1999     4 auto… 4        16    25 p     comp…
+## 10 audi         a4 quattro   2    2008     4 manu… 4        20    28 p     comp…
+## # … with 224 more rows</code></pre>
 <p>It shows the dataset as a “tibble”, which just means table in the tidyverse</p>
 <p>You can also view it as a regular dataset</p>
 <pre class="r"><code>View(mpg)</code></pre>
@@ -379,21 +379,22 @@ $(document).ready(function () {
 <div id="levels-of-measurement" class="section level3">
 <h3>Levels of Measurement</h3>
 <ul>
-<li>Categorical
+<li><em>Categorical</em>
 <ul>
-<li>Binary variable</li>
-<li>Nominal variable</li>
+<li><strong>Binary variable</strong></li>
+<li><strong>Nominal variable</strong></li>
+<li><strong>Ordinal variable</strong></li>
 </ul></li>
-<li>Continuous
+<li><em>Continuous</em>
 <ul>
-<li>Interval variable</li>
-<li>Ratio variable</li>
+<li><strong>Interval variable</strong></li>
+<li><strong>Ratio variable</strong></li>
 </ul></li>
 </ul>
-<p>Datasets contain several different variables. Notice in the mpg dataset, there are several different variables such as <em>model</em>, <em>year</em>, <em>cty</em>, and <em>hwy</em>. These are several different types of variables because they represent different kinds of things. In statistics we refer to this as <em>levels of measurement</em>. There are two broad types of variables, <em>categorical</em> and <em>continuous</em> (Field, 2009, pages 8-9). Categorical variables are based on particular categories, such a type of shoe, religious affiliation, or political affiliation. A <em>binary</em> variable is a type of categorical variable that only takes two categories. So things like being pregnant or not, voting yes or no on a certain bill, or being alive or dead are binary variables, there are only two possible things in the category. Categorical variables that take on more than 2 possibilities are called <em>nominal</em> variables (nominal means names)</p>
-<p>There’s no mathematics involved in determining categorical variables, it’s simply based on which category has the most accurate fit. Either you are a republican, democrat, or independent, there is no mathematical quantity that would determine the appropriate category. There is one type of categorical variable that is ordered based on the absence or presence of a particular property, which is an <em>ordinal</em> variable. Ordinal variables have a particular rank order, but the rankings are <em>not</em> equal or uniform. So for example, college basketball team rankings would be an ordinal variable. The teams are ranked from best to worst, but team #2 may be twice is good as team #3, while team #5 maybe four times as good as team #6. So ordinal data tells us more about the variable than nominal data, but it still doesn’t provide a standardized scale of measurement.</p>
-<p><em>Continuous</em> variables are the second broad category and involves some type of numerical measurement to define the property in the variable. Continuous variables can take on any value in the measurement scale defined by the variable. The first example of this type variable is an <em>interval</em> variable. These types of variables are based on a measurement scale with equal distances between the ranks based on the property measured; equal intervals in the scale are able to represent equal differences in the variable being measured. The Fahrenheit scale would be an interval scale because the difference in degree between 64 and 65 is the same as 74 and 75.</p>
-<p><em>Ratio</em> variables add one more dimension to the properties of an interval variable. In addition to having an equal distance in ranks, ratios have an absolute zero point. This allows for multiplication of the intervals or the use of ratios. So on a ratio scale of 0 to 5, a score of 4 would be twice as good as a score of 2. Time is a good example of a ratio scale. There is an absolute zero point (there is no such thing as negative time), the distance between 40 and 60 seconds is the same as the distance between 30 and 10 seconds. And 20 seconds is twice as long as 10 seconds. Another example, Fahrenheit is an interval scale because you can have negative degrees (e. g. -2 degrees below zero), while the Kelvin scale is a ratio scale because there is an absolute zero point and no negative numbers.</p>
+<p>Datasets contain several different variables. Notice in the mpg dataset, there are several different variables such as <em>model</em>, <em>year</em>, <em>cty</em>, and <em>hwy</em>. These are several different types of variables because they represent different kinds of things. In statistics we refer to this as <em>levels of measurement</em>. There are two broad types of variables, <em>categorical</em> and <em>continuous</em> (Field, 2009, pages 8-9). Categorical variables are based on particular categories, such a type of shoe, religious affiliation, or political affiliation. A <strong>binary</strong> variable is a type of categorical variable that only takes two categories. So things like being pregnant or not, voting yes or no on a certain bill, or being alive or dead are binary variables, there are only two possible things in the category. Categorical variables that take on more than 2 possibilities are called <strong>nominal</strong> variables (nominal means names)</p>
+<p>There’s no mathematics involved in determining categorical variables, it’s simply based on which category has the most accurate fit. Either you are a republican, democrat, or independent, there is no mathematical quantity that would determine the appropriate category. There is one type of categorical variable that is ordered based on the absence or presence of a particular property, which is an <strong>ordinal</strong> variable. Ordinal variables have a particular rank order, but the rankings are <em>not</em> equal or uniform. So for example, college basketball team rankings would be an ordinal variable. The teams are ranked from best to worst, but team #2 may be twice is good as team #3, while team #5 maybe four times as good as team #6. So ordinal data tells us more about the variable than nominal data, but it still doesn’t provide a standardized scale of measurement.</p>
+<p><em>Continuous</em> variables are the second broad category and involves some type of numerical measurement to define the property in the variable. Continuous variables can take on any value in the measurement scale defined by the variable. The first example of this type variable is an <strong>interval</strong> variable. These types of variables are based on a measurement scale with equal distances between the ranks based on the property measured; equal intervals in the scale are able to represent equal differences in the variable being measured. The Fahrenheit scale would be an interval scale because the difference in degree between 64 and 65 is the same as 74 and 75.</p>
+<p><strong>Ratio</strong> variables add one more dimension to the properties of an interval variable. In addition to having an equal distance in ranks, ratios have an absolute zero point. This allows for multiplication of the intervals or the use of ratios. So on a ratio scale of 0 to 5, a score of 4 would be twice as good as a score of 2. Time is a good example of a ratio scale. There is an absolute zero point (there is no such thing as negative time), the distance between 40 and 60 seconds is the same as the distance between 30 and 10 seconds. And 20 seconds is twice as long as 10 seconds. Another example, Fahrenheit is an interval scale because you can have negative degrees (e. g. -2 degrees below zero), while the Kelvin scale is a ratio scale because there is an absolute zero point and no negative numbers.</p>
 <p>One other property of continuous variables is that they allow for different degrees of measurement precision. So for example, the continuous ratio variable of time can be measured in hours, minutes, seconds, milliseconds, etc. In contrast, a <em>discrete</em> variable can only take on a fixed measurement scale, like a rank scale of 1 to 10. The scale requires that you choose a value between 1 and 10, 2.5 is not possible.</p>
 <p>Let’s start by creating a simple scatterplot graph</p>
 <pre class="r"><code>ggplot(data = mpg) +
@@ -409,14 +410,14 @@ $(document).ready(function () {
 </div>
 <div id="about-the-variables" class="section level3">
 <h3>About the variables</h3>
-<p>If you look at the variables, you’ll notice that hwy and displ are numbers and R views them as integers or whole numbers. Scatterplots usually require data that are numeric like this, numbers that go up in scale. So in this case scatterplots typically require <em>interval</em> or <em>ratio</em> data.</p>
+<p>If you look at the variables, you’ll notice that hwy and displ are numbers and R views them as integers or whole numbers. Scatterplots usually require data that are numeric like this, numbers that go up in scale. So in this case scatterplots typically require <strong>interval</strong> or <strong>ratio</strong> data.</p>
 <p>One peculiar thing about this graph is the group of numbers just above the numbers in the right corner. The general trend we see in these variables is that as displacement goes up (i.e. the engine using more gasoline) the highway mileage goes down. This is sometimes referred to as a negative relationship. The cars with the best highway mileage displace the least amount of gasoline. However, there’s a group of dots that range between 20 and 30 on the hwy variable, but seem to displace more gasoline than most. How can this be?</p>
 <p>One way we can answer this question is by adding in an additional variable. In this case the class or type of car. Let’s add that in now as an additional variable to our graph.</p>
 <pre class="r"><code>ggplot(data = mpg) + 
   geom_point(mapping = aes(x = displ, y = hwy, color = class))</code></pre>
 <p><img src="Intro_ggplot_files/figure-html/unnamed-chunk-6-1.png" width="672" /></p>
 <p>Notice how most of those dots are 2 seater cars. Thus, the reason they get better gas mileage is because they are smaller cars!!</p>
-<p>Class is a particular kind of variable, in this case a <em>nominal</em> or <em>categorical</em> variable. r refers to them as characters. These are basically categories, so we can’t do any math on them. You can’t make a formula out of compact x midsize or minivan/pickup.</p>
+<p>Class is a particular kind of variable, in this case a <strong>nominal</strong> or <em>categorical</em> variable. r refers to them as characters. These are basically categories, so we can’t do any math on them. You can’t make a formula out of compact x midsize or minivan/pickup.</p>
 <p>Let’s do one more graph, but add a little color</p>
 <pre class="r"><code>ggplot(data = mpg) + 
   geom_point(mapping = aes(x = displ, y = hwy), color = &quot;blue&quot;)</code></pre>
